--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha1
	- Added Batch Download to single Artist view
	- Added back in the direct links on songs, requires download set
		to enabled as it's essentially the same thing except with
		now playing information tied to it
	- Bumped API Version to 350001 and require that a version is sent
		with handshake to indicate the application will work
	- Removed the MyStrands plugin as did not provide good data, and does
		not appear to have been used
	- Added Catalog Prefix config option used to determine which prefixes
		should not be used for sorting
	- Merged Browse Menu with Home
	- Added checkbox to single artist view allowing you to enable/disable
		album art thumbnails on albums of said artist
	- Added timeout override on update_single_item because the function
		is a lie
	- Fix translations so it's not all german
	- Genre Tag is now used as a 'Tag', Browse Genre removed
	- Ignore getid3() iconv stuff doesn't seem to work
	- Improved fix_filenames.inc, tries a translation first then strips
		invalid characters 
	- Fixed album art not clearing thumbnail correctly on gather 
	- Fixed localplay instance not displaying correctly after change
		until a page refresh
	- Fixed endless loop on index if you haven't played a song in 
		over two years
	- Fixed gather art and parse m3u not working on catalog create
		also added URL read support to m3u import
	- Upped Minimum requirements to Mysql 5.x
	- Add codeunde1load's Web 2.0 style tag patch
	- Fixed typo in e-mail From: name (Thx Xgizzmo)
	- Fixed typo in browse auto_init() which could cause ampache to not
		remember your start point in some situations. (Thx Xgizzmo)
