@@ -251,13 +251,12 @@ unset($results);
 flip_class(array('odd','even')); 
 
 /* Check to see if we need to perform an update */
-if (! preg_match('/update\.php/', $_SERVER['PHP_SELF'])) {
+if (!preg_match('/update\.php/', $_SERVER['PHP_SELF'])) {
 	if (Update::need_update()) {
 		header("Location: " . Config::get('web_path') . "/update.php");
 		exit();
 	}
 }
-
 // For the XMLRPC stuff
 $GLOBALS['xmlrpc_internalencoding'] = Config::get('site_charset'); 
 ?>
